--- a/code/templates/life-skills.html
+++ b/code/templates/life-skills.html
@@ -230,6 +230,54 @@
                                     </li>
                                 </ul>
                             </div>
+                            <div class="blog_related_post">
+                                <h2 class="c_head">Related Post</h2>
+                                <div class="row">
+                                    <div class="col-lg-4 col-sm-6">
+                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
+                                            <img src="../static/img/blog-grid/blog_grid_post2.jpg" alt="">
+                                            <div class="grid_post_content">
+                                                <div class="post_tag">
+                                                    <a href="/mental-health">18 Min Read</a>
+                                                    <a class="cat-HerBlossom">Health</a>
+                                                </div>
+                                                <a href="/mental-health">
+                                                    <h4 class="b_title">The Power of Physical Activity for Women</h4>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-sm-6">
+                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
+                                            <img src="../static/img/blog-grid/blog_grid_post3.jpg" alt="">
+                                            <div class="grid_post_content">
+                                                <div class="post_tag">
+                                                    <a href="/life-skills">10 Min Read</a>
+                                                    <a class="cat-woocommerce">Skills</a>
+                                                </div>
+                                                <a href="/life-skills">
+                                                    <h4 class="b_title">20 Important Life Skills to Support Your
+                                                        Career</h4>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-sm-6">
+                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
+                                            <img src="../static/img/blog-grid/blog_grid_post6.jpg" alt="">
+                                            <div class="grid_post_content">
+                                                <div class="post_tag">
+                                                    <a href="/useful-skills">9 Min Read</a>
+                                                    <a class="cat-megento">Skills</a>
+                                                </div>
+                                                <a href="/useful-skills">
+                                                    <h4 class="b_title">Ten Life Hacks You Might Want to Know</h4>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -246,7 +294,7 @@
                             <div class="widget categorie_widget">
                                 <h4 class="c_head">Post Categories</h4>
                                 <ul class="list-unstyled categorie_list">
-                                    <li><a href="/blog-category/skills">Skill <span>(15)</span></a></li>
+                                    <li><a href="/blog-category/skills">Skills<span>(15)</span></a></li>
                                 </ul>
                             </div>
                             <div class="widget font-adjust-controls">
