--- a/code/templates/mental-health.html
+++ b/code/templates/mental-health.html
@@ -11,6 +11,8 @@
     <!-- icon css_test-->
     <link rel="stylesheet" href="../static/assets/elagent-icon/style.css">
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
+    <link rel="stylesheet" href="../static/assets/font-awesome/css/all.css">
+    <link rel="stylesheet" href="../static/css_new/style-hp.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
     <title>HerBlossom</title>
@@ -212,56 +214,6 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="blog_related_post">
-                                <h2 class="c_head">Related Post</h2>
-                                <div class="row">
-                                    <div class="col-lg-4 col-sm-6">
-                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
-                                            <img src="../static/img/blog-grid/blog_grid_post2.jpg" alt="">
-                                            <div class="grid_post_content">
-                                                <div class="post_tag">
-                                                    <a href="#">18 Min Read</a>
-                                                    <a class="cat-HerBlossom" href="#">HerBlossom</a>
-                                                </div>
-                                                <a href="#">
-                                                    <h4 class="b_title">70 Best Startups You Need to Watch Out for</h4>
-                                                </a>
-                                                <p>Cup of char brilliant horse play bro bread sloshed lavatory only...</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-sm-6">
-                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
-                                            <img src="../static/img/blog-grid/blog_grid_post3.jpg" alt="">
-                                            <div class="grid_post_content">
-                                                <div class="post_tag">
-                                                    <a href="#">10 Min Read</a>
-                                                    <a class="cat-woocommerce" href="#">WooCommerce</a>
-                                                </div>
-                                                <a href="#">
-                                                    <h4 class="b_title">How to Connect Google With WordPress</h4>
-                                                </a>
-                                                <p>Cup of char brilliant horse play bro bread sloshed lavatory only...</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-sm-6">
-                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
-                                            <img src="../static/img/blog-grid/blog_grid_post6.jpg" alt="">
-                                            <div class="grid_post_content">
-                                                <div class="post_tag">
-                                                    <a href="#">9 Min Read</a>
-                                                    <a class="cat-megento" href="#">Megento</a>
-                                                </div>
-                                                <a href="#">
-                                                    <h4 class="b_title">10 WordPress Security Issues And How to Fix</h4>
-                                                </a>
-                                                <p>Cup of char brilliant horse play bro bread sloshed lavatory only...</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="comment_inner">
                                 <h2 class="c_head">3 Comment</h2>
                                 <ul class="comment_box list-unstyled">
@@ -274,7 +226,6 @@
                                                     <div class="comment_date">July 3, 2020 at 2:14 pm</div>
                                                 </div>
                                                 <p>Cuppa the bee's knees the full monty bloke cockup pear shaped bubble and squeak lavatory naff, chip shop bodge burke do one have.!</p>
-                                                <a href="#" class="comment_reply"><i class="arrow_right"></i>Reply</a>
                                             </div>
                                         </div>
                                         <ul class="list-unstyled reply_comment">
@@ -287,7 +238,6 @@
                                                             <div class="comment_date">44 mins ago</div>
                                                         </div>
                                                         <p>Dropped a clanger up the kyver easy peasy vagabond victoria sponge Charles tinkety tonk old fruit argy.!</p>
-                                                        <a href="#" class="comment_reply"><i class="arrow_right"></i>Reply</a>
                                                     </div>
                                                 </div>
                                             </li>
@@ -300,7 +250,6 @@
                                                             <div class="comment_date">44 mins ago</div>
                                                         </div>
                                                         <p>Dropped a clanger up the kyver easy peasy vagabond victoria sponge Charles tinkety tonk old fruit argy.!</p>
-                                                        <a href="#" class="comment_reply"><i class="arrow_right"></i>Reply</a>
                                                     </div>
                                                 </div>
                                             </li>
@@ -315,30 +264,57 @@
                                                     <div class="comment_date">04 mins ago</div>
                                                 </div>
                                                 <p>Cuppa the bee's knees the full monty bloke cockup pear shaped bubble and squeak lavatory naff, chip shop bodge burke do one have.!</p>
-                                                <a href="#" class="comment_reply"><i class="arrow_right"></i>Reply</a>
                                             </div>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="blog_comment_box">
-                                <h2 class="c_head">Leave a Comment</h2>
-                                <p>Your email address will not be published. Required fields are marked *</p>
-                                <form class="get_quote_form row" action="#" method="post">
-                                    <div class="col-md-6 form-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Name">
+                            <div class="blog_related_post">
+                                <h2 class="c_head">Related Post</h2>
+                                <div class="row">
+                                    <div class="col-lg-4 col-sm-6">
+                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
+                                            <img src="../static/img/blog-grid/blog_grid_post2.jpg" alt="">
+                                            <div class="grid_post_content">
+                                                <div class="post_tag">
+                                                    <a href="/mental-health">18 Min Read</a>
+                                                    <a class="cat-HerBlossom">Health</a>
+                                                </div>
+                                                <a href="/mental-health">
+                                                    <h4 class="b_title">The Power of Physical Activity for Women</h4>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-6 form-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Email">
+                                    <div class="col-lg-4 col-sm-6">
+                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
+                                            <img src="../static/img/blog-grid/blog_grid_post3.jpg" alt="">
+                                            <div class="grid_post_content">
+                                                <div class="post_tag">
+                                                    <a href="/life-skills">10 Min Read</a>
+                                                    <a class="cat-woocommerce">Skills</a>
+                                                </div>
+                                                <a href="/life-skills">
+                                                    <h4 class="b_title">20 Important Life Skills to Support Your Career</h4>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-12 form-group">
-                                        <input type="text" class="form-control" id="web" placeholder="Website">
+                                    <div class="col-lg-4 col-sm-6">
+                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
+                                            <img src="../static/img/blog-grid/blog_grid_post6.jpg" alt="">
+                                            <div class="grid_post_content">
+                                                <div class="post_tag">
+                                                    <a href="/useful-skills">9 Min Read</a>
+                                                    <a class="cat-megento">Skills</a>
+                                                </div>
+                                                <a href="/useful-skills">
+                                                    <h4 class="b_title">Ten Life Hacks You Might Want to Know</h4>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-12 form-group">
-                                        <textarea class="form-control message" placeholder="Comment"></textarea>
-                                    </div>
-                                    <div class="col-md-12"><button class="btn action_btn thm_btn" type="submit">Post Comment</button></div>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -356,18 +332,34 @@
                             <div class="widget categorie_widget">
                                 <h4 class="c_head">Post Categories</h4>
                                 <ul class="list-unstyled categorie_list">
-                                    <li><a href="#">Creative <span>(12)</span></a></li>
-                                    <li><a href="#">Inspiration <span>(8)</span></a></li>
-                                    <li><a href="#">Lifestyle <span>(3)</span></a></li>
-                                    <li><a href="#">News <span>(4)</span></a></li>
-                                    <li><a href="#">Photography <span>(12)</span></a></li>
-                                    <li><a href="#">Skill <span>(15)</span></a></li>
-                                    <li><a href="#">Tourist Tours <span>(10)</span></a></li>
-                                    <li><a href="#">Inspire <span>(5)</span></a></li>
+                                    <li><a href="/blog-category/skills">Skills<span>(15)</span></a></li>
                                 </ul>
                             </div>
+                            <div class="widget font-adjust-controls">
+                                <h4 class="c_head">Useful Tools</h4>
+
+                                <button class="btn-font-increase" onclick="changeFontSizeAll(1)">
+                                    <i class="fas fa-search-plus" aria-hidden="true"></i>
+                                    <span class="sr-only">A+</span>
+                                </button>
+
+                                <button class="btn-font-decrease" onclick="changeFontSizeAll(-1)">
+                                    <i class="fas fa-search-minus" aria-hidden="true"></i>
+                                    <span class="sr-only">A-</span>
+                                </button>
+
+                                <button class="btn-font-reset" onclick="resetFontSizeAll()">
+                                    <i class="fas fa-sync-alt" aria-hidden="true"></i>
+                                    <span class="sr-only">Reset</span>
+                                </button>
+
+                                <a href="javascript:window.print()" class="print">
+                                    <i class="icon_printer" aria-hidden="true"></i>
+                                    <span class="sr-only">Print</span>
+                                </a>
+                            </div>
                             <div class="widget recent_news_widget">
-                                <h4 class="c_head">Reacent News</h4>
+                                <h4 class="c_head">Recent News</h4>
                                 <div class="media recent_post_item">
                                     <img src="../static/img/blog-single/news_01.jpg" alt="">
                                     <div class="media-body">
@@ -435,44 +427,14 @@
                                 </ul>
                             </div>
                             <div class="widget tag_widget">
-                                <h4 class="c_head">Tags</h4>
+                                <h4 class="c_head">Trends</h4>
                                 <ul class="list-unstyled w_tag_list">
-                                    <li><a href="#">Design</a></li>
-                                    <li><a href="#">Apps</a></li>
-                                    <li><a href="#">Photography</a></li>
-                                    <li><a href="#">Business</a></li>
-                                    <li><a href="#">HerBlossom</a></li>
-                                    <li><a href="#">WordPress</a></li>
-                                    <li><a href="#">Design</a></li>
-                                    <li><a href="#">DocAll</a></li>
-                                    <li><a href="#">Magento</a></li>
-                                    <li><a href="#">Doc Design</a></li>
-                                    <li><a href="#">ui/ux</a></li>
-                                    <li><a href="#">Docs</a></li>
+                                    <li><a href="https://travel.usnews.com/rankings/best-summer-vacations/">Vacation</a></li>
+                                    <li><a href="/life-skills">Skills</a></li>
+                                    <li><a href="https://open.spotify.com/">Music</a></li>
+                                    <li><a href="/forum">Forum</a></li>
+                                    <li><a href="/about-us">HerBlossom</a></li>
                                 </ul>
-                            </div>
-                            <div class="widget instragram_widget">
-                                <h4 class="c_head">Instragram</h4>
-                                <div class="instragram_info">
-                                    <a href="#" class="instragram_item">
-                                        <img src="../static/img/blog-single/image_01.jpg" alt="">
-                                    </a>
-                                    <a href="#" class="instragram_item">
-                                        <img src="../static/img/blog-single/image_02.jpg" alt="">
-                                    </a>
-                                    <a href="#" class="instragram_item">
-                                        <img src="../static/img/blog-single/image_03.jpg" alt="">
-                                    </a>
-                                    <a href="#" class="instragram_item">
-                                        <img src="../static/img/blog-single/image_04.jpg" alt="">
-                                    </a>
-                                    <a href="#" class="instragram_item">
-                                        <img src="../static/img/blog-single/image_05.jpg" alt="">
-                                    </a>
-                                    <a href="#" class="instragram_item">
-                                        <img src="../static/img/blog-single/image_06.jpg" alt="">
-                                    </a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -583,6 +545,44 @@
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
     <script src="../static/js/change-button.js"></script>
+    <script>
+
+        // 缓存所有需要调整的元素
+        let allTextElements = [];
+
+        // 页面加载完毕后缓存元素列表
+        window.addEventListener('DOMContentLoaded', () => {
+            allTextElements = Array.from(document.querySelectorAll('body *'))
+                    // 过滤掉不能设置 fontSize 的标签，比如 <script>, <style> 等
+                    .filter(el => el.nodeType === Node.ELEMENT_NODE);
+        });
+
+        /**
+         * 调整所有元素的字体大小
+         * @param {number} delta - 以像素为单位的增量（正数放大，负数缩小）
+         */
+        function changeFontSizeAll(delta) {
+            allTextElements.forEach(el => {
+                // 获取当前计算值，例如 "16px"
+                const style = window.getComputedStyle(el).getPropertyValue('font-size');
+                const current = parseFloat(style);
+                // 计算新的字号，并限制在 10px–36px
+                const next = Math.min(Math.max(current + delta, 10), 36);
+                el.style.fontSize = next + 'px';
+            });
+        }
+
+        /**
+         * 重置所有元素的字体大小到默认
+         * 移除内联 font-size，让它们回到原始 CSS 样式
+         */
+        function resetFontSizeAll() {
+            allTextElements.forEach(el => {
+                el.style.removeProperty('font-size');
+            });
+        }
+
+    </script>
 </body>
 
 </html>
